// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useMeetupScreenSetup should set up the header correctly 1`] = `
<Header
  icons={
    [
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [Function],
      },
      {
        "color": "#DF321F",
        "id": "trash",
        "onPress": [Function],
      },
    ]
  }
  title=""
/>
`;

exports[`useMeetupScreenSetup should set up the header correctly when deletable is undefined 1`] = `
<Header
  icons={
    [
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [Function],
      },
    ]
  }
  title=""
/>
`;
